--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@editorjs/editorjs": "^2.19.0",
-    "next": "10.0.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "showdown": "^1.9.1"
-  }
+    "name": "my-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@editorjs/editorjs": "^2.19.0",
+        "ipfs-http-client": "^48.1.2",
+        "next": "10.0.3",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "showdown": "^1.9.1"
+    }
 }
